# GenXData

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLETED.md  Dockerfile  api-production.py  api.py  cli-requirements.txt  config.yaml  convert_configs.py  generator-requirements.txt  main.py  pyproject.toml  readme.md  req.txt  run_tests.py  test-docker.sh  vercel.json
amqp/: producer.py
cli/: __init__.py  main_cli.py
configs/: GENERATOR_SETTINGS.py  STRATEGIES.json  STRATEGIES.yaml  WRITERS.json  WRITERS.yaml  WRITERS_IMPLEMENTATIONS.yaml  WRITERS_MAPPING.json  WRITERS_MAPPING.yaml  __init__.py
core/: __init__.py  base_strategy.py  orchestrator.py  strategy_config.py  strategy_factory.py  strategy_mapping.py
examples/: README.md  advanced_random_names.yaml  all_example.yaml  all_generators.yaml  artemis_streaming_test.yaml  batch_config_csv.yaml  concate_strategy.yaml  date_generator.yaml  delete.yaml  distributed_date_range_strategy.yaml  distributed_number_range_strategy.yaml  distributed_time_range_strategy.yaml  generator-example-mapping.json  kafka_streaming_example.yaml  large_streaming_test.yaml  masking_streaming_test.yaml  pattern_strategy.yaml  random_name_strategy.yaml  random_number_range_example.yaml  random_number_with_masking_example.yaml  replacement_strategy.yaml  series_strategy_example.yaml  series_strategy_with_relation.yaml  simple_random_number_example.yaml  streaming_config_example.yaml  time_range_strategy.yaml  updated_amqp_streaming_example.yaml
exceptions/: __init__.py  base_exception.py  config_exception.py  (+8 more)
(+155 files in other folders)
