[tool.poetry]
name = "genxdata"
version = "0.1.0"
description = "Synthetic Data Generation Tool - A comprehensive toolkit for generating synthetic data with various strategies and output formats"
authors = ["Tosif khan <khantosif94@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false
keywords = ["synthetic-data", "data-generation", "testing", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
cramjam = "2.10.0"
et-xmlfile = "2.0.0"
fastparquet = "2024.11.0"
fsspec = "2025.5.1"
names = "0.3.0"
numpy = "2.3.1"
packaging = "25.0"
pandas = "2.3.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pyyaml = "6.0.2"
rstr = "3.2.2"
six = "1.17.0"
tzdata = "2025.2"
python-qpid-proton = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
mypy = "^1.17.0"
pre-commit = "^4.2.0"
ruff = "^0.12.4"


[tool.poetry.group.api.dependencies]
fastapi = "^0.116.1"
uvicorn = "^0.35.0"

[tool.poetry.scripts]
genxdata = "cli.main_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
